# intmax-interoperability-plugin

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  example.env  package-lock.json
contracts/: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  remappings.txt
contracts/.openzeppelin/: unknown-1442.json  unknown-534353.json
contracts/contracts/: FlagManager.sol  FlagManager.test.sol  ModifiedOfferManagerReverseV2.sol  ModifiedOfferManagerV2.sol  OfferManager.sol  OfferManager.test.sol  OfferManagerBase.sol  OfferManagerBaseInterface.sol  OfferManagerInterface.sol  OfferManagerReverse.sol  OfferManagerReverseInterface.sol  OfferManagerReverseV2.sol  OfferManagerReverseV2.test.sol  OfferManagerReverseV2Interface.sol  OfferManagerReverseV3.sol  OfferManagerReverseV3.test.sol  OfferManagerReverseV3Interface.sol  OfferManagerV2.sol  OfferManagerV2.test.sol  OfferManagerV2Interface.sol  OfferManagerV3.sol  OfferManagerV3.test.sol  OfferManagerV3Interface.sol  SimpleVerifier.sol  SimpleVerifier.test.sol  Verifier.sol  Verifier.test.sol  VerifierInterface.sol
contracts/reports/: gas-report
contracts/scripts/: deploy.ts  deployPoseidon.ts  deployV1.ts  deployV2.ts  deploy_test.ts  updateAllowList.ts  upgrade.ts  upgradeModifiedV2.ts  upgradeV2.ts
contracts/test/: FlagManager.ts  OfferManager.ts  OfferManagerReverse.ts  OfferManagerReverseV2.ts  OfferManagerV2.ts  Poseidon.ts  SimpleVerifier.ts  Verifier.ts  sampleData.ts
docs/: address.json  concept.md  specification.md
src/: lib.rs  main.rs  zk_evm_exit_tree.rs
(+54 files in other folders)
