[package]
name = "intmax-interoperability-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.4"
dotenv = "0.15"
ethers = { version = "1.0", features = ["abigen", "ethers-solc", "legacy", "rustls"] }
hex = "0.4"
hex-literal = "0.3"
open-fastrlp = "0.1.4"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.18", features = ["macros"] }

[lib]
